pvc-inspector.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pvc-inspector
spec:
  containers:
  - name: inspector
    image: busybox
    command: ['sleep', '3600']
    volumeMounts:
    - mountPath: /data
      name: pvc-data
  volumes:
  - name: pvc-data
    persistentVolumeClaim:
      claimName: test-claim
