argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
   # cert-manager.io/cluster-issuer: "letsencrypt-prod" # Optional for TLS
spec:
  ingressClassName: nginx
#  tls:
#    - hosts:
#        - argocd.example.com  # Replace with your domain
#      secretName: argocd-tls  # Optional for TLS 
  rules:
    - host: argocd.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
